--- a/etc/skel/.config/xfce4/panel/docklike-2.rc
+++ b/etc/skel/.config/xfce4/panel/docklike-2.rc
@@ -1,4 +1,9 @@
- 
 [user]
 showPreviews=true
 pinned=thunar;
+indicatorStyle=1
+inactiveIndicatorStyle=1
+forceIconSize=false
+keyComboActive=false
+keyAloneActive=false
+inactiveColor=rgb(119,118,123)
