Pin brave in panel

--- a/etc/skel/.config/xfce4/panel/docklike-2.rc
+++ b/etc/skel/.config/xfce4/panel/docklike-2.rc
@@ -1,6 +1,6 @@
 [user]
 showPreviews=true
-pinned=thunar;
+pinned=thunar;brave-browser;
 indicatorStyle=1
 inactiveIndicatorStyle=1
 forceIconSize=false
