--- a/etc/skel/.conky/Nashira-Dark/Nashira-Dark.conf
+++ b/etc/skel/.conky/Nashira-Dark/Nashira-Dark.conf
@@ -17,7 +17,7 @@ conky.config = {
 
 -- Size and Position settings --
   alignment = 'middle_middle',
-  gap_x = -150,
+  gap_x = -100,
   gap_y = 0,
   maximum_width = 500,
   minimum_height = 500,
@@ -76,16 +76,16 @@ ${offset 335}${voffset 30}${font Jost:bold:size=24}${execi 100 cat ~/.cache/weat
 ##${offset 335}${voffset 20}${font Jost:size=11}${execi 100 cat ~/.cache/weather.json | jq -r '.weather[0].description' | sed "s|\<.|\U&|g"} in ${execi 100 cat ~/.cache/weather.json | jq -r '.name'}${font}
 ##${offset 335}${voffset 3}${color}${font Jost:size=11}Wind Speed is ${execi 100 (cat ~/.cache/weather.json | jq '.wind.speed')}m/s at direction${font}
 ##${offset 335}${voffset 3}${color}${font Jost:size=11}${execi 100 (cat ~/.cache/weather.json | jq -r '.wind.deg')}° and Humidity is ${execi 100 (cat ~/.cache/weather.json | jq '.main.humidity')}%.${font}
-${Alignc 150}${voffset -20}${font Beckman:size=70}${time %H}${font}
-##${offset 335}${voffset 3}${color}${font Jost:size=11}Media player${font}
+${Alignc 150}${voffset 80}${font Beckman:size=70}${time %H}${font}
+##${offset 150}${voffset 0}${color}${font Jost:size=11}Media player${font}
 ${offset 335}${voffset 10}${color}${font Jost:bold:size=24}${exec ~/.config/conky/Nashira-Dark/scripts/playerctl.sh}${font}
-${offset 335}${voffset 10}${color}${font Jost:size=11}${exec playerctl metadata xesam:title}${font}
-${offset 335}${voffset 3}${color}${font Jost:size=11}${exec playerctl status}${font}
-${Alignc 150}${voffset -96}${font Beckman:size=70}${time %M}${font}
+${offset 40}${voffset 180}${color}${font Jost:bold:size=12}${exec playerctl metadata xesam:title}${font}
+${offset 85}${voffset 3}${color}${font Jost:size=11}${exec playerctl status}${font}
+${Alignc 150}${voffset -250}${font Beckman:size=70}${time %M}${font}
 ${offset 35}${voffset 20}${color}${font Jost:bold:size=13}
 ${Alignc 150}${voffset -5}${font Beckman:size=16}${time %d %B}${font}
 ${Alignc 150}${voffset 2}${font Beckman:size=16}${time %A}${font}
 ##${offset 335}${voffset -27}${color}${font Jost:size=11}Your Machine is powered by ${distribution}${font}
-${offset 20}${voffset 10}${color}${font Jost:size=11} RAM : ${memperc}% & CPU : ${cpu cpu0}% used${font}
+${offset 10}${voffset 10}${color}${font Jost:size=11} RAM : ${memperc}% & CPU : ${cpu cpu0}% used${font}
 ##${offset 335}${voffset 3}${color}${font Jost:size=11}temperature ${acpitemp}°C${font}
 ]]
