Fix config theme conky

--- a/etc/skel/.conky/Big-Minimal/Big-Minimal.conf
+++ b/etc/skel/.conky/Big-Minimal/Big-Minimal.conf
@@ -82,8 +82,8 @@ ${Alignc}${voffset 3}${color}${font TruenoSemiBoldItalic:size=11}${exec playerct
 ##${Alignc}${voffset 3}${color}${font TruenoSemiBoldItalic:size=12}Media player${font}
 
 ##Date##
-${Alignc}${voffset 15}${font AllenSans:Regular:size=16}${time %d %B}${font}
-${Alignc}${voffset 5}${font AllenSans:Regular:size=16}${time %A}${font}
+${Alignc}${voffset 15}${font TruenoSemiBoldItalic:size=16}${time %d %B}${font}
+${Alignc}${voffset 5}${font TruenoSemiBoldItalic:size=16}${time %A}${font}
 
 ##RAM and CPU usage##
 ${Alignc}${voffset 30}${color}${font TruenoSemiBoldItalic:size=12}with RAM : ${memperc}% & CPU : ${cpu cpu0}% used${font}
