--- a/etc/skel/.conky/Big-Minimal/Big-Minimal.conf
+++ b/etc/skel/.conky/Big-Minimal/Big-Minimal.conf
@@ -77,7 +77,7 @@ ${Alignc}${voffset 5}${font AllenSans:Bold:size=100}${time %M}${font}
 
 ##Music Player##
 ${Alignc}${voffset 5}${color}${font AllenSans:Regular:size=24}${exec ~/.config/conky/Big-Minimal/scripts/playerctl.sh}${font}
-${Alignc}${voffset 5}${color}${font AllenSans:Bold:size=13}${exec playerctl metadata xesam:title}${font}
+${Alignc}${voffset 5}${color}${font TruenoSemiBoldItalic:size=13}${exec playerctl metadata xesam:title}${font}
 ${Alignc}${voffset 3}${color}${font TruenoSemiBoldItalic:size=11}${exec playerctl status}${font}
 ##${Alignc}${voffset 3}${color}${font TruenoSemiBoldItalic:size=12}Media player${font}
 
